set up: redux, redux-persist auth-next

--- a/package.json
+++ b/package.json
@@ -6,29 +6,44 @@
         "dev": "next dev",
         "build": "next build",
         "start": "next start",
-        "lint": "next lint"
+        "lint": "next lint",
+        "seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts",
+        "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
+        "prisma:generate": "prisma generate",
+        "prisma:migrate": "prisma migrate deploy",
+        "prisma:studio": "prisma studio"
     },
     "dependencies": {
         "@ai-sdk/openai": "^1.1.13",
+        "@auth/core": "^0.38.0",
+        "@auth/prisma-adapter": "^2.8.0",
+        "@heroicons/react": "^2.2.0",
+        "@prisma/client": "6.4.1",
+        "@reduxjs/toolkit": "^2.6.0",
         "@vercel/postgres": "^0.10.0",
         "ai": "^4.1.45",
         "bcryptjs": "^3.0.2",
-        "next": "15.1.7",
+        "clsx": "^2.1.1",
+        "next": "15.2.1-canary.5",
         "next-auth": "5.0.0-beta.25",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-redux": "^9.2.0",
+        "redux-persist": "^6.0.0",
         "zod": "^3.24.2"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
         "@types/bcrypt": "^5.0.2",
-        "@types/node": "^20.17.19",
+        "@types/node": "^22.13.9",
         "@types/react": "^19",
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.1.7",
         "postcss": "^8",
+        "prisma": "^6.4.1",
         "tailwindcss": "^3.4.1",
+        "ts-node": "^10.9.2",
         "typescript": "^5",
         "uuid": "^11.1.0"
     },
