--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
         "@heroicons/react": "^2.2.0",
         "@prisma/client": "6.4.1",
         "@reduxjs/toolkit": "^2.6.0",
+        "@vercel/blob": "^0.27.2",
         "@vercel/postgres": "^0.10.0",
         "ai": "^4.1.45",
         "bcryptjs": "^3.0.2",
         "clsx": "^2.1.1",
+        "install": "^0.13.0",
         "next": "15.2.1-canary.5",
         "next-auth": "5.0.0-beta.25",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-redux": "^9.2.0",
         "redux-persist": "^6.0.0",
+        "uuidv4": "^6.2.13",
         "zod": "^3.24.2"
     },
     "devDependencies": {
