--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,33 @@
 {
-    "extends": "next/core-web-vitals",
+    "extends": [
+        "next/core-web-vitals",
+        "eslint:recommended",
+        "plugin:@typescript-eslint/recommended",
+        "plugin:@typescript-eslint/recommended-requiring-type-checking"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "project": "./tsconfig.json",
+        "ecmaVersion": 2022,
+        "sourceType": "module"
+    },
+    "plugins": ["@typescript-eslint"],
     "rules": {
         "@typescript-eslint/no-unused-vars": [
             "error",
             {
                 "argsIgnorePattern": "^_",
                 "varsIgnorePattern": "^_",
-                "destructuredArrayIgnorePattern": "^_"
+                "destructuredArrayIgnorePattern": "^_",
+                "ignoreRestSiblings": true
             }
         ],
+        "@typescript-eslint/no-explicit-any": "error",
+        "@typescript-eslint/ban-ts-comment": "error",
+        "@typescript-eslint/no-non-null-assertion": "error",
+        "@typescript-eslint/explicit-module-boundary-types": "warn",
+        "react-hooks/exhaustive-deps": "error",
         "react/no-unescaped-entities": "off",
-        "@typescript-eslint/no-explicit-any": "warn",
-        "react-hooks/exhaustive-deps": "warn"
+        "no-console": ["warn", { "allow": ["warn", "error"] }]
     }
 }
