--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
         "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
         "prisma:generate": "prisma generate",
         "prisma:migrate": "prisma migrate deploy",
-        "prisma:studio": "prisma studio"
+        "prisma:studio": "prisma studio",
+        "prepare": "husky",
+        "vercel-build": "tsc && next lint && next build"
     },
     "dependencies": {
         "@ai-sdk/openai": "^1.1.13",
@@ -43,7 +45,12 @@
         "@types/react-dom": "^19",
         "eslint": "^9",
         "eslint-config-next": "15.1.7",
+        "eslint-plugin-import": "^2.31.0",
+        "eslint-plugin-jsx-a11y": "^6.10.2",
+        "husky": "^9.1.7",
+        "lint-staged": "^15.4.3",
         "postcss": "^8",
+        "prettier": "^3.5.3",
         "prisma": "^6.4.1",
         "tailwindcss": "^3.4.1",
         "ts-node": "^10.9.2",
@@ -52,5 +59,14 @@
     },
     "engines": {
         "node": ">=20.12.0"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint --fix",
+            "prettier --write"
+        ],
+        "*.{json,md}": [
+            "prettier --write"
+        ]
     }
 }
