--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
         "prisma:migrate": "prisma migrate deploy",
         "prisma:studio": "prisma studio",
         "prepare": "husky",
-        "vercel-build": "tsc && next lint && next build"
+        "vercel-build": "prisma generate && prisma migrate deploy && next build",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@ai-sdk/openai": "^1.1.13",
         "@auth/core": "^0.38.0",
         "@auth/prisma-adapter": "^2.8.0",
         "@heroicons/react": "^2.2.0",
-        "@prisma/client": "6.4.1",
+        "@prisma/client": "6.5.0",
         "@reduxjs/toolkit": "^2.6.0",
         "@vercel/blob": "^0.27.2",
         "@vercel/postgres": "^0.10.0",
@@ -30,6 +31,7 @@
         "install": "^0.13.0",
         "next": "15.2.1-canary.5",
         "next-auth": "5.0.0-beta.25",
+        "prisma": "^6.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
         "react-redux": "^9.2.0",
@@ -51,7 +53,6 @@
         "lint-staged": "^15.4.3",
         "postcss": "^8",
         "prettier": "^3.5.3",
-        "prisma": "^6.4.1",
         "tailwindcss": "^3.4.1",
         "ts-node": "^10.9.2",
         "typescript": "^5",
