--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
         "ai": "^4.1.61",
         "bcryptjs": "^3.0.2",
         "clsx": "^2.1.1",
+        "flowbite-react": "^0.10.2",
         "install": "^0.13.0",
         "next": "15.2.1-canary.5",
         "next-auth": "5.0.0-beta.25",
         "prisma": "^6.5.0",
         "react": "^19.0.0",
         "react-dom": "^19.0.0",
+        "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "redux-persist": "^6.0.0",
         "uuidv4": "^6.2.13",
