--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "ai": "^4.1.61",
         "bcryptjs": "^3.0.2",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "flowbite-react": "^0.10.2",
         "install": "^0.13.0",
         "next": "15.2.1-canary.5",
