--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
         "@auth/prisma-adapter": "^2.8.0",
         "@heroicons/react": "^2.2.0",
         "@prisma/client": "6.5.0",
+        "@radix-ui/react-dropdown-menu": "^2.1.6",
+        "@radix-ui/react-slot": "^1.1.2",
         "@reduxjs/toolkit": "^2.6.1",
         "@vercel/blob": "^0.27.3",
         "@vercel/postgres": "^0.10.0",
         "ai": "^4.1.61",
         "bcryptjs": "^3.0.2",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
         "flowbite-react": "^0.10.2",
         "install": "^0.13.0",
+        "lucide-react": "^0.487.0",
         "next": "15.2.1-canary.5",
         "next-auth": "5.0.0-beta.25",
         "prisma": "^6.5.0",
@@ -39,6 +43,8 @@
         "react-icons": "^5.5.0",
         "react-redux": "^9.2.0",
         "redux-persist": "^6.0.0",
+        "tailwind-merge": "^3.1.0",
+        "tailwindcss-animate": "^1.0.7",
         "uuidv4": "^6.2.13",
         "zod": "^3.24.2"
     },
