Enhance database cleanup functionality and update documentation
- Added a new API route for triggering database cleanup tasks, allowing manual execution of cleanup operations.
- Implemented a cleanup service to manage orphaned audio records, marking and deleting them as necessary.
- Introduced a new documentation file for database cleanup processes, detailing the audio records cleanup mechanism.
- Updated schema_merriam.json and patterns.json to reflect changes in word definitions and relationships.
- Enhanced the CheckWordForm component to display alternative forms and multiple audio pronunciations for better user experience.
- Improved type definitions in dictionaryActions.ts and related files for better type safety and clarity in data handling.
- Updated .cursorignore to exclude specific documentation files from indexing.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "next lint",
     "seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts",
     "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate deploy",
-    "prisma:studio": "prisma studio",
+    "p-generate": "prisma generate",
+    "p-migrate": "prisma migrate deploy",
+    "p-studio": "prisma studio",
+    "p-new-setup": "prisma migrate reset && rm -rf node_modules/.prisma && pnpm install && prisma migrate dev --name init && prisma generate",
     "prepare": "husky",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "postinstall": "prisma generate"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.5",
