--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
+    "type-fest": "^4.39.1",
     "typescript": "^5.8.2",
     "uuid": "^11.1.0"
   },
