--- a/package.json
+++ b/package.json
@@ -24,8 +24,13 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-scroll-area": "^1.2.4",
+    "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@reduxjs/toolkit": "^2.6.1",
@@ -39,8 +44,9 @@
     "flowbite-react": "^0.10.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
-    "next": "15.2.1-canary.5",
+    "next": "15.3.1-canary.13",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.6",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -48,6 +54,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
