Update package.json, pnpm-lock.yaml, and enhance UI components
- Updated `@prisma/client` and `prisma` to version 6.6.0 for improved functionality.
- Modified `p-new-setup` script in package.json to ensure proper cleanup of Prisma files.
- Added new Radix UI components: `@radix-ui/react-dialog`, `@radix-ui/react-progress`, and `@radix-ui/react-tabs` to enhance UI capabilities.
- Introduced a new test file for initial testing setup.
- Deleted outdated DATABASE_CLEANUP.md documentation to streamline project files.
- Improved accessibility and structure in various UI components for better user experience.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "p-generate": "prisma generate",
     "p-migrate": "prisma migrate deploy",
     "p-studio": "prisma studio",
-    "p-new-setup": "prisma migrate reset && rm -rf node_modules/.prisma && pnpm install && prisma migrate dev --name init && prisma generate",
+    "p-new-setup": "prisma migrate reset && rm -rf node_modules/.prisma && rm -rf node_modules/prisma && pnpm install && prisma migrate dev --name init && prisma generate",
     "prepare": "husky",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
@@ -22,17 +22,20 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "6.5.0",
+    "@prisma/client": "6.6.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-dialog": "^1.1.8",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.6",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.5",
     "@reduxjs/toolkit": "^2.6.1",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
@@ -41,13 +44,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "flowbite-react": "^0.10.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "next": "15.3.1-canary.13",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
-    "prisma": "^6.5.0",
+    "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
