--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.2.4",
     "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
     "ai": "^4.1.61",
