--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "6.6.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.8",
@@ -38,19 +39,25 @@
     "@radix-ui/react-tabs": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.4",
     "@reduxjs/toolkit": "^2.6.1",
+    "@t3-oss/env-nextjs": "^0.13.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/cache-manager": "^5.0.0",
+    "@types/memory-cache": "^0.2.6",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
     "ai": "^4.1.61",
     "bcryptjs": "^3.0.2",
+    "cache-manager": "^6.4.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
+    "memory-cache": "^0.2.0",
     "next": "15.3.1-canary.13",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "pexels": "^1.4.0",
     "prisma": "^6.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
