--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "p-studio": "prisma studio",
     "p-new-setup": "prisma migrate reset && rm -rf node_modules/.prisma && rm -rf node_modules/prisma && pnpm install && prisma migrate dev --name init && prisma generate",
     "prepare": "husky",
+    "postinstall": "patch-package",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
@@ -36,8 +37,10 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tabs": "^1.1.5",
+    "@radix-ui/react-tabs": "^1.1.9",
+    "@radix-ui/react-toast": "^1.2.11",
     "@radix-ui/react-tooltip": "^1.2.4",
+    "@radix-ui/react-use-effect-event": "^0.0.2",
     "@reduxjs/toolkit": "^2.6.1",
     "@t3-oss/env-nextjs": "^0.13.0",
     "@tanstack/react-table": "^8.21.3",
@@ -51,6 +54,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "extended-google-translate-api": "^2.0.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "memory-cache": "^0.2.0",
@@ -83,7 +87,9 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.0",
+    "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.5.3",
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
@@ -101,6 +107,17 @@
     ],
     "*.{json,md}": [
       "prettier --write"
+    ]
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@prisma/client",
+      "@prisma/engines",
+      "bufferutil",
+      "esbuild",
+      "postinstall-postinstall",
+      "prisma",
+      "sharp"
     ]
   }
 }
