--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
-    "@prisma/client": "6.6.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.4",
@@ -64,7 +64,7 @@
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pexels": "^1.4.0",
-    "prisma": "^6.6.0",
+    "prisma": "^6.7.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
