--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "memory-cache": "^0.2.0",
-    "next": "15.3.1-canary.13",
+    "next": "^15.3.2",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pexels": "^1.4.0",
