Update environment variable management and enhance dictionary deletion features
- Updated `.cursorignore` and `.gitignore` to include `.env.local` files for better environment management.
- Introduced `BulkDeleteConfirmDialog` component for confirming bulk deletions in the dictionary management section, improving user experience.
- Enhanced `DictionariesPage` to support bulk deletion of selected words, including state management for delete confirmation and loading indicators.
- Implemented `deleteSelectedWords` action in the dictionary domain to handle bulk deletions with comprehensive cleanup.
- Updated `DESCRIPTION_OF_CORE_FOLDER.md` to reflect new deletion actions and improved dictionary management features.
- Added detailed comments and documentation for new components and actions to enhance code clarity and maintainability.

--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+#.env*.local
 
 # vercel
 .vercel
@@ -43,7 +44,6 @@ next-env.d.ts
 #Prisma
 prisma/generated
 .prisma/client
-.env*.local
 
 # Documentation
 documentation/
