--- a/package.json
+++ b/package.json
@@ -11,13 +11,17 @@
     "lint": "next lint",
     "seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts",
     "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
-    "p-generate": "prisma generate",
-    "p-migrate": "prisma migrate deploy",
-    "p-studio": "prisma studio",
-    "p-new-setup": "prisma migrate reset && rm -rf node_modules/.prisma && rm -rf node_modules/prisma && pnpm install && prisma migrate dev --name init && prisma generate",
+    "p-generate": "dotenv-run --env .env.local -- prisma generate",
+    "p-migrate": "dotenv-run --env .env.local -- prisma migrate deploy",
+    "p-studio": "dotenv-run --env .env.local -- prisma studio",
+    "p-new-setup": "dotenv-run --env .env.local -- prisma migrate reset && rm -rf node_modules/.prisma && rm -rf node_modules/prisma && pnpm install && dotenv-run --env .env.local -- prisma migrate dev --name init && dotenv-run --env .env.local -- prisma generate",
     "prepare": "husky",
     "postinstall": "patch-package",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build"
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "validate-env": "node scripts/validate-env.mjs",
+    "env:check": "node scripts/validate-env.mjs --check-files",
+    "env:template": "node scripts/validate-env.mjs --template",
+    "prebuild": "pnpm run validate-env"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.2.5",
@@ -80,6 +84,7 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@dotenv-run/cli": "^1.3.6",
     "@eslint/eslintrc": "^3.3.0",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.10",
