--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "extended-google-translate-api": "^2.0.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
@@ -90,6 +91,7 @@
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "dotenv-cli": "^8.0.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
