--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-aspect-ratio": "^1.1.4",
     "@radix-ui/react-avatar": "^1.1.4",
     "@radix-ui/react-checkbox": "^1.1.5",
@@ -43,7 +44,7 @@
     "@radix-ui/react-select": "^2.1.7",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slider": "^1.3.5",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.9",
     "@radix-ui/react-toast": "^1.2.11",
@@ -64,6 +65,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "extended-google-translate-api": "^2.0.2",
+    "input-otp": "^1.4.2",
     "install": "^0.13.0",
     "lucide-react": "^0.487.0",
     "memory-cache": "^0.2.0",
