--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
     "seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts",
     "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
     "p-generate": "dotenv-run --env .env.local -- prisma generate",
@@ -91,16 +95,21 @@
   "devDependencies": {
     "@dotenv-run/cli": "^1.3.6",
     "@eslint/eslintrc": "^3.3.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.13.10",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.5.2",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.22.0",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
+    "jsdom": "^26.1.0",
     "lint-staged": "^15.5.0",
     "module-alias": "^2.2.3",
     "patch-package": "^8.0.0",
@@ -112,7 +121,8 @@
     "tsx": "^4.19.4",
     "type-fest": "^4.39.1",
     "typescript": "^5.8.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vitest": "^3.2.3"
   },
   "engines": {
     "node": ">=20.12.0"
