clean version before deployment

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "seed": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/seed.ts",
     "setup-db": "ts-node --compiler-options \"{\\\"module\\\":\\\"CommonJS\\\"}\" prisma/setup-db.ts",
     "p-generate": "dotenv-run --env .env.local -- prisma generate",
-    "p-migrate": "dotenv-run --env .env.local -- prisma migrate deploy",
+    "p-migrate:deploy": "dotenv-run --env .env.local -- prisma migrate deploy",
+    "p-migrate:dev": "dotenv-run --env .env.local -- prisma migrate dev",
     "p-studio": "dotenv-run --env .env.local -- prisma studio",
     "p-new-setup": "dotenv-run --env .env.local -- prisma migrate reset && rm -rf node_modules/.prisma && rm -rf node_modules/prisma && pnpm install && dotenv-run --env .env.local -- prisma migrate dev --name init && dotenv-run --env .env.local -- prisma generate",
+    "p-change-schema": "dotenv-run --env .env.local -- prisma migrate dev && dotenv-run --env .env.local -- prisma migrate deploy && rm -rf node_modules/.prisma && rm -rf node_modules/@prisma && pnpm install @prisma/client && dotenv-run --env .env.local -- prisma generate",
     "prepare": "husky",
     "postinstall": "patch-package",
     "vercel-build": "prisma generate && prisma migrate deploy && next build",
