--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@types/memory-cache": "^0.2.6",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
+    "@vercel/speed-insights": "^1.2.0",
     "ai": "^4.1.61",
     "bcryptjs": "^3.0.2",
     "cache-manager": "^6.4.2",
@@ -77,7 +78,7 @@
     "lucide-react": "^0.487.0",
     "memory-cache": "^0.2.0",
     "next": "^15.3.2",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "pexels": "^1.4.0",
     "prisma": "^6.7.0",
