--- a/package.json
+++ b/package.json
@@ -30,44 +30,44 @@
     "prebuild": "pnpm run validate-env"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^1.2.5",
+    "@ai-sdk/openai": "^1.3.22",
     "@auth/core": "^0.38.0",
-    "@auth/prisma-adapter": "^2.8.0",
+    "@auth/prisma-adapter": "^2.9.1",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^5.0.1",
     "@prisma/client": "^6.8.2",
-    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-alert-dialog": "^1.1.14",
-    "@radix-ui/react-aspect-ratio": "^1.1.4",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
+    "@radix-ui/react-aspect-ratio": "^1.1.7",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-collapsible": "^1.1.11",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-progress": "^1.1.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slider": "^1.3.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
-    "@radix-ui/react-tabs": "^1.1.9",
-    "@radix-ui/react-toast": "^1.2.11",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@radix-ui/react-use-effect-event": "^0.0.2",
-    "@reduxjs/toolkit": "^2.6.1",
-    "@t3-oss/env-nextjs": "^0.13.0",
+    "@reduxjs/toolkit": "^2.8.2",
+    "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/cache-manager": "^5.0.0",
     "@types/memory-cache": "^0.2.6",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.2.0",
-    "ai": "^4.1.61",
+    "ai": "^4.3.16",
     "bcryptjs": "^3.0.2",
-    "cache-manager": "^6.4.2",
+    "cache-manager": "^6.4.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -78,42 +78,42 @@
     "lucide-react": "^0.487.0",
     "memory-cache": "^0.2.0",
     "next": "^15.3.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.29",
     "next-themes": "^0.4.6",
     "pexels": "^1.4.0",
-    "prisma": "^6.7.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.55.0",
+    "prisma": "^6.8.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "sonner": "^2.0.3",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "uuidv4": "^6.2.13",
     "vaul": "^1.1.2",
-    "zod": "^3.24.2"
+    "zod": "^3.25.16"
   },
   "devDependencies": {
     "@dotenv-run/cli": "^1.3.6",
-    "@eslint/eslintrc": "^3.3.0",
+    "@eslint/eslintrc": "^3.3.1",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/bcrypt": "^5.0.2",
-    "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
+    "@types/node": "^22.15.21",
+    "@types/react": "^19.1.5",
+    "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.2",
     "dotenv-cli": "^8.0.0",
-    "eslint": "^9.22.0",
+    "eslint": "^9.27.0",
     "eslint-config-next": "15.1.7",
     "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "husky": "^9.1.7",
     "jsdom": "^26.1.0",
-    "lint-staged": "^15.5.0",
+    "lint-staged": "^15.5.2",
     "module-alias": "^2.2.3",
     "patch-package": "^8.0.0",
     "postcss": "^8.5.3",
@@ -122,8 +122,8 @@
     "tailwindcss": "^3.4.17",
     "ts-node": "^10.9.2",
     "tsx": "^4.19.4",
-    "type-fest": "^4.39.1",
-    "typescript": "^5.8.2",
+    "type-fest": "^4.41.0",
+    "typescript": "^5.8.3",
     "uuid": "^11.1.0",
     "vitest": "^3.2.3"
   },
@@ -148,6 +148,10 @@
       "postinstall-postinstall",
       "prisma",
       "sharp"
-    ]
+    ],
+    "overrides": {
+      "brace-expansion@>=1.0.0 <=1.1.11": ">=1.1.12",
+      "brace-expansion@>=2.0.0 <=2.0.1": ">=2.0.2"
+    }
   }
 }
