--- a/package.json
+++ b/package.json
@@ -60,8 +60,8 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@t3-oss/env-nextjs": "^0.13.4",
     "@tanstack/react-table": "^8.21.3",
-    "@types/cache-manager": "^5.0.0",
     "@types/memory-cache": "^0.2.6",
+    "@types/uuid": "^10.0.0",
     "@vercel/blob": "^0.27.3",
     "@vercel/postgres": "^0.10.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -91,7 +91,6 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuidv4": "^6.2.13",
     "vaul": "^1.1.2",
     "zod": "^3.25.16"
   },
@@ -101,7 +100,6 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
-    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22.15.21",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
