--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "validate-env": "node scripts/validate-env.mjs",
     "env:check": "node scripts/validate-env.mjs --check-files",
     "env:template": "node scripts/validate-env.mjs --template",
-    "prebuild": "pnpm run validate-env"
+    "prebuild": "pnpm run validate-env",
+    "analyze": "cross-env ANALYZE=true pnpm run build",
+    "analyze:open": "cross-env ANALYZE=true pnpm run build && start .next/analyze/client.html",
+    "analyze:server": "cross-env ANALYZE=true pnpm run build && start .next/analyze/nodejs.html"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
@@ -97,6 +100,7 @@
   "devDependencies": {
     "@dotenv-run/cli": "^1.3.6",
     "@eslint/eslintrc": "^3.3.1",
+    "@next/bundle-analyzer": "^15.3.4",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
@@ -104,6 +108,7 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.2",
+    "cross-env": "^7.0.3",
     "dotenv-cli": "^8.0.0",
     "eslint": "^9.27.0",
     "eslint-config-next": "15.1.7",
