Refactor Documentation Structure and Enhance Development Environment
- Updated `.cursorignore` and `.gitignore` to reflect the new `bufferfolder` directory for documentation and JSON files, ensuring proper file management.
- Added rewrites in `next.config.mjs` for Vercel Speed Insights configuration in the development environment, improving local testing capabilities.
- Created `Practice_section.md` to outline improvements for the Typing Practice section, detailing exercise types and user interactions for better clarity.
- Removed outdated documentation files (`AUTH_SYSTEM.md`, `code-quality-and-deployment.md`, `database-schema.md`, `PRISMA.md`, `requirements.md`, `schema-improvements.md`, `PROMPTS.md`) to streamline the documentation repository.
- Introduced new documentation files (`DATABASE_DESCRIPTION.md`, `DESCRIPTION_OF_COMPONENT_FOLDER.md`, `DESCRIPTION_OF_CORE_FOLDER.md`, `DESCRIPTION_OF_ROOT_FOLDER.md`, `ENV_SETUP_SUMMARY.md`, `IMAGE_AUTHENTICATION_SOLUTION.md`, `IMPLEMENTATION_PLAN.md`, `SETTINGS_SYSTEM_IMPLEMENTATION.md`, `VERCEL_DEPLOYMENT_CHECKLIST.md`) to enhance project clarity and organization.
- Updated `saveJson.ts` utility to save JSON files in the new `bufferfolder`, ensuring consistent file handling across the application.
- Revised type definitions in `pexels.d.ts` to reflect the new naming conventions, improving code clarity.
- Updated relevant documentation files to ensure all changes are accurately reflected and easy to navigate.

--- a/.cursorignore
+++ b/.cursorignore
@@ -45,10 +45,10 @@ prisma/generated
 .prisma/client
 
 
-# Documentation
+# BufferFolder
 
-documentation/*.json
-documentation/schema_merriam.json
+bufferfolder/*.json
+bufferfolder/schema_merriam.json
 
 # tests
 
