--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "prisma": "^6.10.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-error-boundary": "^6.0.0",
     "react-hook-form": "^7.56.4",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
