Refactor Next.js Configuration and Introduce Vocabulary Practice Documentation
- Removed Turbopack configuration from `next.config.mjs` to streamline the development setup.
- Updated the `package.json` to separate the development scripts for Turbo and standard Next.js, enhancing clarity for developers.
- Added a new documentation file `DEBUGGING_SYSTEM.md` outlining the debugging infrastructure for the Vocabulary Practice system, detailing features, architecture, and usage for developers.
- Introduced a new `VocabularyPracticeContent` component to manage vocabulary practice modes and settings, improving user experience.
- Enhanced existing components with organized debugging capabilities to facilitate better tracking and issue resolution during practice sessions.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "description": "Comprehensive AI-powered typing test and analysis tool with a full featured dictionary and word search. Were deep elaborated dictionaries with a deep analysis of the words and their meanings.",
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
+    "dev:turbo": "next dev --turbo",
     "dev:webpack": "next dev",
     "build": "next build",
     "start": "next start",
