--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "prebuild": "pnpm run validate-env",
     "analyze": "cross-env ANALYZE=true pnpm run build",
     "analyze:open": "cross-env ANALYZE=true pnpm run build && start .next/analyze/client.html",
-    "analyze:server": "cross-env ANALYZE=true pnpm run build && start .next/analyze/nodejs.html"
+    "analyze:server": "cross-env ANALYZE=true pnpm run build && start .next/analyze/nodejs.html",
+    "docs:validate": "node scripts/validate-docs.mjs",
+    "docs:check": "node scripts/validate-docs.mjs"
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.22",
