--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next"],
+  "exclude": ["node_modules", ".next", "documentation", "bufferFolder"],
   "rules": {
     "indent": ["error", 2]
   }
